# LearnOpenCV

./: CMakeLists.txt  main.cpp
Assign1/: assign1.cpp
Quiz1/: Quiz1.cpp
Quiz2/: Quiz2.cpp
